JIP-317 FIX: 모바일 헤더 z-index 조정

--- a/src/css/MobileHeader.css
+++ b/src/css/MobileHeader.css
@@ -2,7 +2,7 @@
   width: 100%;
   margin: auto;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   left: 50%;
   transform: translate(-50%);
